Add Instagram link and update LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -185,13 +185,26 @@
                     </div>
                 </a>
 
-                <a href="https://www.linkedin.com/in/ken-yoda-saito" class="social-link" target="_blank">
+                <a href="https://www.linkedin.com/in/ken-saito-46b5bb293" class="social-link" target="_blank">
                     <div class="social-icon linkedin">
                         <i class="fab fa-linkedin"></i>
                     </div>
                     <div class="social-info">
                         <div class="social-name">LinkedIn</div>
                         <div class="social-handle">ken.yoda.saito</div>
+                    </div>
+                    <div class="social-arrow">
+                        <i class="fas fa-chevron-right"></i>
+                    </div>
+                </a>
+
+                <a href="https://www.instagram.com/ken.yoda.saito/" class="social-link" target="_blank">
+                    <div class="social-icon instagram">
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                    <div class="social-info">
+                        <div class="social-name">Instagram</div>
+                        <div class="social-handle">@ken.yoda.saito</div>
                     </div>
                     <div class="social-arrow">
                         <i class="fas fa-chevron-right"></i>
